@@ -638,7 +638,7 @@ public:
     void _M_copy_from_string(const string& __s,
 			     size_t __pos,
 			     size_t __n) {
-      typedef char_traits<char> _Traits;
+      typedef typename string::traits_type _Traits;
 #endif
       reset();
       size_t __tmp = _Nb;
@@ -648,11 +648,11 @@ public:
         // boris : widen() ?
         if (__k == '1')
           set(__i);
-        else if (__k !='0')
+        else if (__k != '0')
           __stl_throw_invalid_argument("bitset");
       }
     }
-  
+ 
 # if defined (_STLP_MEMBER_TEMPLATES)
   template <class _CharT, class _Traits, class _Alloc>
     void _M_copy_to_string(basic_string<_CharT, _Traits, _Alloc>& __s) const
@@ -662,9 +662,10 @@ public:
     {
       __s.assign(_Nb, '0');
       
-      for (size_t __i = 0; __i < _Nb; ++__i) 
-	if (_Unchecked_test(__i))
-	  __s[_Nb - 1 - __i] = '1';
+      for (size_t __i = 0; __i < _Nb; ++__i) {
+	      if (_Unchecked_test(__i))
+	        __s[_Nb - 1 - __i] = '1';
+      }
     }
 
 # if defined (_STLP_NON_TYPE_TMPL_PARAM_BUG)
@@ -724,6 +725,8 @@ operator^(const bitset<_Nb>& __x,
 
 #if defined ( _STLP_USE_NEW_IOSTREAMS )
 
+#if ! (defined(_STLP_MSVC) || (_STLP_MSVC < 1300)) && ! (defined(__SUNPRO_CC) || (__SUNPRO_CC < 0x500))
+
 template <class _CharT, class _Traits, size_t _Nb>
 basic_istream<_CharT, _Traits>&  _STLP_CALL
 operator>>(basic_istream<_CharT, _Traits>& __is, bitset<_Nb>& __x);
@@ -732,6 +735,113 @@ operator>>(basic_istream<_CharT, _Traits>& __is, bitset<_Nb>& __x);
 template <class _CharT, class _Traits, size_t _Nb>
 basic_ostream<_CharT, _Traits>& _STLP_CALL
 operator<<(basic_ostream<_CharT, _Traits>& __os, const bitset<_Nb>& __x);
+
+#else
+
+template <size_t _Nb>
+istream&  _STLP_CALL
+operator>>(istream& __is, bitset<_Nb>& __x) {
+  typedef typename string::traits_type _Traits;
+  string __tmp;
+  __tmp.reserve(_Nb);
+
+  // Skip whitespace
+  typename istream::sentry __sentry(__is);
+  if (__sentry) {
+    streambuf* __buf = __is.rdbuf();
+    for (size_t __i = 0; __i < _Nb; ++__i) {
+      static typename _Traits::int_type __eof = _Traits::eof();
+
+      typename _Traits::int_type __c1 = __buf->sbumpc();
+      if (_Traits::eq_int_type(__c1, __eof)) {
+        __is.setstate(ios_base::eofbit);
+        break;
+      }
+      else {
+        typename _Traits::char_type __c2 = _Traits::to_char_type(__c1);
+        char __c  = __is.narrow(__c2, '*');
+
+        if (__c == '0' || __c == '1')
+          __tmp.push_back(__c);
+        else if (_Traits::eq_int_type(__buf->sputbackc(__c2), __eof)) {
+          __is.setstate(ios_base::failbit);
+          break;
+        }
+      }
+    }
+
+    if (__tmp.empty())
+      __is.setstate(ios_base::failbit);
+    else
+      __x._M_copy_from_string(__tmp, __STATIC_CAST(size_t,0), _Nb);
+  }
+
+  return __is;
+}
+
+template <size_t _Nb>
+ostream& _STLP_CALL
+operator<<(ostream& __os, const bitset<_Nb>& __x) {
+  string __tmp;
+  __x._M_copy_to_string(__tmp);
+  return __os << __tmp;
+}
+
+#ifndef _STLP_NO_WCHAR_T
+
+template <size_t _Nb>
+wistream&  _STLP_CALL
+operator>>(wistream& __is, bitset<_Nb>& __x) {
+  typedef typename wstring::traits_type _Traits;
+  wstring __tmp;
+  __tmp.reserve(_Nb);
+
+  // Skip whitespace
+  typename wistream::sentry __sentry(__is);
+  if (__sentry) {
+    wstreambuf* __buf = __is.rdbuf();
+    for (size_t __i = 0; __i < _Nb; ++__i) {
+      static typename _Traits::int_type __eof = _Traits::eof();
+
+      typename _Traits::int_type __c1 = __buf->sbumpc();
+      if (_Traits::eq_int_type(__c1, __eof)) {
+        __is.setstate(ios_base::eofbit);
+        break;
+      }
+      else {
+        typename _Traits::char_type __c2 = _Traits::to_char_type(__c1);
+        char __c  = __is.narrow(__c2, '*');
+
+        if (__c == '0' || __c == '1')
+          __tmp.push_back(__c);
+        else if (_Traits::eq_int_type(__buf->sputbackc(__c2), __eof)) {
+          __is.setstate(ios_base::failbit);
+          break;
+        }
+      }
+    }
+
+    if (__tmp.empty())
+      __is.setstate(ios_base::failbit);
+    else
+      __x._M_copy_from_string(__tmp, __STATIC_CAST(size_t,0), _Nb);
+  }
+
+  return __is;
+}
+
+template <size_t _Nb>
+wostream& _STLP_CALL
+operator<<(wostream& __os, const bitset<_Nb>& __x)
+{
+  wstring __tmp;
+  __x._M_copy_to_string(__tmp);
+  return __os << __tmp;
+}
+
+#endif /* _STLP_NO_WCHAR_T */
+
+#endif
 
 #elif ! defined ( _STLP_USE_NO_IOSTREAMS )
 
